src/app/group/components/group-add-topics/group-add-topics.component.scss
@use "mixins";

.dropdown {
  min-width: 160px;
  @include mixins.mobile {
    width: 100%;
  }
}

.no_items {
  display: flex;
  flex-direction: column;
  gap: 24px;
  text-align: center;
  justify-content: center;
  align-items: center;

  .text_wrap {
    max-width: 560px;
    display: flex;
    flex-direction: column;
    gap: 8px;

    .text {
      font-size: 14px;
      font-style: normal;
      font-weight: 400;
      line-height: 20px; /* 142.857% */
    }
  }
}

.container {
  display: flex;
  flex-direction: column;
  width: 100%;
  vertical-align: middle;
  align-items: center;
  gap: 8px;

  &.dialog_container {
    gap: 0;
  }

  .row {
    display: flex;
    width: 100%;
    align-items: center;
    padding: 8px 16px;
    position: relative;
    border-radius: 8px;

    &.dialog_row {
      flex-direction: column;
      padding: 16px;
      .title {
        width: 100%;
      }
    }

    .dialog_wrap_items {
      display: flex;
      width: 100%;
      align-items: center;
      justify-content: space-between;
    }
    .cell_title {
      display: none;
      @include mixins.mobile {
        display: flex;
        width: 100%;
      }
    }

    @include mixins.mobile {
      flex-direction: column;
      gap: 16px;
    }

    &.header_row {
      padding: 12px 16px;

      @include mixins.mobile {
        display: none;
      }
    }

    &:nth-child(even) {
      background-color: var(--color-surface-contrast);
    }
    .title,
    .participants,
    .level,
    .actions {
      display: flex;
      flex-direction: column;
      @include mixins.mobile {
        gap: 8px;
        justify-content: flex-start;
        width: 100%;
      }
    }

    .title {
      flex: 4 4 0;
      text-align: start;
      justify-content: flex-start;
    }
    .participants {
      flex: 1 1 0;
      justify-content: center;

      @include mixins.mobile {
        align-items: flex-start;
        justify-content: flex-start;

        span {
          font-weight: 600;
        }
      }
    }

    .level {
      flex: 2 2 0;
      justify-content: center;
      text-align: left;

      &.with_tooltip {
        flex-direction: row;
      }
    }

    .actions {
      flex: 1 1 0;
      justify-content: center;

      @include mixins.mobile {
        width: 32px;
        height: 32px;
        background-color: var(--color-surfaces);
        position: absolute;
        right: -8px;
        top: -8px;
        border-radius: 40px;
      }
    }
  }
}

